cc: Make SingleOnTop strategy reject transformed overlays.

Currently overlay transforms are ignored by ozone drm platform.
This is causing pepper content to be displayed upside down on certain
devices.

This CL always rejects overlays in SingleOnTop strategy with transform
different than identity while we work on supporting the rotation
(that can be also used for mirroring) property.

Currently OverlayStrategySingleOnTop is used only on drm platforms.

BUG=691013
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2698843005
Cr-Commit-Position: refs/heads/master@{#451378}

Former-commit-id: 15d052adb744d524228947248ab96c80b3bdf7ad